<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ErreursActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mathsDommage"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="5sp"/>
        />
    <ImageView
        android:layout_gravity="center"
        android:layout_marginTop="25sp"
        android:id="@+id/imageCulture"
        android:src="@drawable/ic_sad"
        android:layout_width="100sp"
        android:layout_height="100sp"
        />
    <TextView
        android:id="@+id/erreursTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erreursPreset"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/retour"
        android:layout_marginTop="10sp"
        android:onClick="onClick"
        />
</LinearLayout>