<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mathematiques.TableMultiplicationActivity"
    android:orientation="vertical"
    tools:ignore="UsingOnClickInXml">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tableMultiplicationChoisirTable"
        android:textSize="25sp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:layout_marginTop="5sp"/>
    <ImageView
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:id="@+id/imageCulture"
        android:src="@drawable/ic_maths_operations"
        android:layout_width="100sp"
        android:layout_height="100sp"
        />
    <NumberPicker
        android:id="@+id/tableMultiplicationNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tableMultiplicationGo"
        android:onClick="onClick"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/retour"
        android:onClick="onClickMenu"
        />
</LinearLayout>