<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:ignore="UsingOnClickInXml">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/homeTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="5sp"/>

    <ImageView
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:id="@+id/imageCulture"
        android:src="@drawable/ic_school"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginBottom="10sp"
        />
    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeChoisirEleve"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        />
    <View
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp"
        android:layout_height="1sp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_width="match_parent"
        android:background="#000000"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listeElevesView"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        />

    <View
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp"
        android:layout_height="1sp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:layout_width="match_parent"
        android:background="#000000"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/HomeAnonymeButton"
        android:onClick="onAnonymous"
         />
    <Button
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        android:text="@string/homeAddStudent"
        android:onClick="addEleve"/>

</LinearLayout>